📝 Add instructions for installing dependencies